overflow fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,7 @@
 }
 html,body {
   height: 100%;
+  margin:0px;
   background-image: url("back.jpg");
   background-repeat: no-repeat;
   background-size:cover;
